# muniverse

./: .coverage  .gitignore  pyproject.toml  readme.md
bids_metadata/: avrillon_et_al_2024.json  caillet_et_al_2023.json  grison_et_al_2025.json
configs/: ae.json  cbss.json  upperbound.json
notebooks/: 01_LoadDatasets.ipynb  02_GenerateData.ipynb  02_PreprocessData.ipynb  decompose_recordings.ipynb
scripts/: __init__.py  avrillon2024_to_bids.py  caillet2023_to_bids.py  curr_test.py  generate_configs_TA.py  grison2025_to_bids.py  regenerate_neuromotion_test.py  test_datasets_module.py
scripts/bids_conversion/: caillet2023_to_bids.py
scripts/neurips_submission/: bookkeeping.py  decompose_recordings.py  generate_configs.py  generate_report_cards.py
src/muniverse/: __init__.py
src/muniverse/algorithms/: __init__.py  _run_scd.py  _run_scd.sh  ae_decomposer.py  cbss.py  core.py  decomposition.py  post_processing.py  pre_processing.py  upperbound.py
src/muniverse/configs/: ae.json  hybrid_tibialis.json  neuromotion.json  scd.json
src/muniverse/data_generation/: _run_neuromotion.py  generate_data.py
src/muniverse/datasets/: __init__.py  _generate_recording.sh  _generate_recording_new.sh  _run_neuromotion.py  _run_neuromotion_new.py  load.py  movement.py  postprocess.py  simulate.py
src/muniverse/evaluation/: evaluate.py  report_card_routines.py
src/muniverse/utils/: bids_routines.py  containers.py  data2bids.py  logging.py  otb_io.py
tests/: test_algorithm_core.py  test_algorithms_simple.py  test_datasets.py  test_migration.py
tests/expected_results/: simple_ae_prediction.pkl  simple_cbss_prediction.pkl
