[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "muniverse"
version = "1.0.0"
description = "A modular framework for simulated and experimental EMG dataset generation, motor unit decomposition algorithm benchmarking, and performance evaluation"
readme = "readme.md"
requires-python = ">=3.11"
license = { text = "GPLv3" }
authors = [
    { name = "Pranav Mamidanna", email = "p.mamidanna22@imperial.ac.uk" },
    { name = "Thomas Klotz", email = "thomas.klotz@imsb.uni-stuttgart.de" },
    { name = "Dimitrios Halatsis" },
    { name = "Irene Mendez Guerra" }
]

dependencies = [
    "numpy",
    "scipy",
    "torch",
    "pandas",
    "scikit-learn",
    "easyDataverse",
    "pyedflib",
    "python-dateutil",
    "bids-validator-deno",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "black",
    "isort",
    "mypy",
    "jupyter",
    "ipykernel",
    "matplotlib",
    "seaborn",
]

[tool.setuptools]
# map the "muniverse" top‐level package to your src/muniverse directory
package-dir = { "muniverse" = "src/muniverse" }

# explicitly list which muniverse.* packages to install
packages = [
    "muniverse",
    "muniverse.algorithms",
    "muniverse.datasets",
    "muniverse.evaluation",
    "muniverse.utils",
]

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.mypy]
python_version = "3.11"
warn_return_any = false
warn_unused_configs = false
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = false
disallow_untyped_decorators = false
no_implicit_optional = false
warn_redundant_casts = false
warn_unused_ignores = false
warn_no_return = false
warn_unreachable = false
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --cov=src/muniverse" 