[build-system]
requires = [
    "setuptools>=61.0",
    "setuptools-scm>=8",
]
build-backend = "setuptools.build_meta"

[project]
name = "muniverse"
dynamic = ["version"]
description = "A modular framework for simulated and experimental EMG dataset generation, motor unit decomposition algorithm benchmarking, and performance evaluation"
readme = "readme.md"
requires-python = ">=3.11"
license = { text = "GPLv3" }
authors = [
    { name = "Pranav Mamidanna", email = "p.mamidanna22@imperial.ac.uk" },
    { name = "Thomas Klotz", email = "thomas.klotz@imsb.uni-stuttgart.de" },
]

dependencies = [
    "numpy",
    "scipy",
    "torch",
    "pandas",
    "scikit-learn",
    "easyDataverse",
    "pyedflib",
    "python-dateutil",
    "bids-validator-deno",
    "pydantic",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "black",
    "isort",
    "mypy",
    "jupyter",
    "ipykernel",
    "matplotlib",
    "seaborn",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["muniverse*"]

[tool.setuptools.package-data]
"muniverse.datasets" = ["*.sh", "*.json"]
"muniverse.algorithms" = ["*.sh", "*.json"]

[tool.setuptools_scm]

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.mypy]
python_version = "3.11"
warn_return_any = false
warn_unused_configs = false
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = false
disallow_untyped_decorators = false
no_implicit_optional = false
warn_redundant_casts = false
warn_unused_ignores = false
warn_no_return = false
warn_unreachable = false
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --cov=src/muniverse" 
